# ValleScope2

./: .gitignore  .gitmodules  .~lock.assignments.tsv#  CMakeLists.txt  README.md  run_vallescope2_all_parameter_trials.sh  run_vallescope2_all_parameter_trials2.sh
include/vallescope2/: fasta.hpp  fasta_index.hpp  input_preparation.hpp  sequence_catalog.hpp
include/vallescope2/alignment/: base_alignment.hpp
include/vallescope2/anchor/: anchor_detection.hpp  anchor_output.hpp  anchor_selection.hpp  genmap_runner.hpp  window_scoring.hpp
include/vallescope2/bundle/: chaining.hpp
include/vallescope2/common/: process.hpp  sha256.hpp  workspace.hpp
include/vallescope2/context/: anchor_grouping.hpp  structural_context.hpp  structural_tokens.hpp
include/vallescope2/correspondence/: assignment.hpp  edit_distance.hpp
include/vallescope2/interface/: options.hpp
scripts/: analyze_dup_fn_failure_stages.py  analyze_fp_failure_modes.py  analyze_low_identity_patch_candidates.py  analyze_vallescope2_patch_gaps.py  append_vallescope2_dual_trial_log.py  build_truth_like_gfa.py  compare_sv_callsets.py  compare_three_sv_callsets.py  compare_truth_paf_boundaries.py  debug_chain_anchors_to_paf.py  debug_context_group_ed.py  debug_context_operation_histogram.py  debug_correspondences_to_paf.py  debug_paf_patch_overlap_stats.py  debug_paf_ribbon_png.py  debug_truth_sv_local_qc_png.py  debug_truth_vcf_to_paf.py  draw_jointpatch_qc_panels.py  plot_multi_sv_reference_histogram.py  plot_ref_query_full_length_overview.py  plot_sv_reference_histogram.py  prepare_chm13_reference_paf.py  run_assignment_sweep.py  run_chain_gap_sweep.py  run_joint_patch_sweep.py  run_minboth1_parameter_sweep.py  run_patch_best_followup_sweep.py  run_patch_required_sweep.py  run_unialigner_pggb_chr8_10samples.sh  run_vallescope2_base_alignment_parameter_trials.sh  run_vallescope2_dual_trial.sh  run_vallescope2_gap_reduction_parameter_trials.sh  run_vallescope2_trial.sh  summarize_multi_sv_ac.py  summarize_vallescope2_dual_trial.py  unialigner_cigar_to_paf.py
src/alignment/: alignment_engine.cpp  anchor_guided_alignment.cpp  base_alignment.cpp  base_alignment_internal.hpp  base_alignment_io.cpp  base_alignment_output.cpp  bundle_extension.cpp  bundle_postprocessing.cpp
src/anchor/: anchor_detection.cpp  anchor_output.cpp  anchor_selection.cpp  genmap_runner.cpp  window_scoring.cpp
src/bundle/: chaining.cpp  chaining_dp.cpp  chaining_internal.hpp  chaining_io.cpp  chaining_refinement.cpp  chaining_trim.cpp
src/common/: process.cpp  sha256.cpp  workspace.cpp
src/context/: anchor_grouping.cpp  structural_context.cpp  structural_tokens.cpp
src/correspondence/: assignment.cpp  assignment_common.cpp  assignment_internal.hpp  assignment_loader.cpp  assignment_matching.cpp  assignment_merge.cpp  assignment_output.cpp
src/input/: fasta.cpp  fasta_index.cpp  input_preparation.cpp  sequence_catalog.cpp
src/interface/: main.cpp  options.cpp
test/: anchor_grouping_test.cpp  chaining_context_test.cpp  edit_distance_test.cpp
